--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/24kaushik/youtube-clone#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.3"
